fix(a11y): ensures .LinkToTop is below .Lexicon (fixes impossible to access close button in definition dialog on small screens)

--- a/client/src/components/preview/Doc.scss
+++ b/client/src/components/preview/Doc.scss
@@ -260,7 +260,7 @@ a.LexiconLink {
   font-family: $serif;
   max-height: 60%;
   position: fixed;
-  z-index: 1;
+  z-index: 3; // over .LinkToTop
   width: 100%;
 
   dl {
